--- a/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4.csproj
+++ b/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4/MathematicalLinguisticsTask4.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Operator.cs" />
+    <Compile Include="ReversePolishNotationConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
